# Hashing

./: .gitignore  .gitmodules  Platform.Hashing.sln  README.md
.github/workflows/: CD.yml  cpp.yml
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  conanfile.txt
cpp/Platform.Hashing/: CMakeLists.txt  Platform.Hashing.Any.h  Platform.Hashing.Base.h  Platform.Hashing.Combine.h  Platform.Hashing.CombineHashes.h  Platform.Hashing.Crc32.h  Platform.Hashing.Expand.h  Platform.Hashing.Hash.h  Platform.Hashing.Other.h  Platform.Hashing.Range.h  Platform.Hashing.Ranges.h  Platform.Hashing.TemplateLibrary.nuspec  Platform.Hashing.TemplateLibrary.vcxproj  Platform.Hashing.TemplateLibrary.vcxproj.filters  Platform.Hashing.Tuple.h  Platform.Hashing.h  combine.h  crc.h  crc32_impl.h  hash.h  noexport.h
cpp/Platform.Hashing.Benchmarks/: Any.cpp  CMakeLists.txt  Main.cpp  Range.cpp  Ranges.cpp
cpp/Platform.Hashing.Tests/: AllTests.cpp  CMakeLists.txt  Platform.Hashing.TemplateLibrary.Tests.cpp  Platform.Hashing.TemplateLibrary.Tests.vcxproj  Platform.Hashing.TemplateLibrary.Tests.vcxproj.filters
cpp/Platform.Hashing/sse2neon/: sse2neon.h
